--- a/pom.xml
+++ b/pom.xml
@@ -8,6 +8,18 @@
     <packaging>war</packaging>
     <version>1.0</version>
 
+    <dependencies>
+        <dependency>
+            <groupId>org.apereo.cas</groupId>
+            <artifactId>cas-server-support-jdbc</artifactId>
+            <version>${cas.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>5.1.46</version>
+        </dependency>
+    </dependencies>
     <build>
         <plugins>
             <plugin>
